Temporary fix of vanishing invariants on btor2c tasks
git-svn-id: https://svn.sosy-lab.org/software/cpachecker/branches/fix-vanishing-invariants@44075 4712c6d2-40bb-43ae-aa4b-fec3f1bdfe4c