@@ -1,31 +1,50 @@
-// This file is part of CPAchecker,
-// a tool for configurable software verification:
-// https://cpachecker.sosy-lab.org
-//
-// SPDX-FileCopyrightText: 2007-2020 Dirk Beyer <https://www.sosy-lab.org>
-//
-// SPDX-License-Identifier: Apache-2.0
-
+/*
+ *  CPAchecker is a tool for configurable software verification.
+ *  This file is part of CPAchecker.
+ *
+ *  Copyright (C) 2007-2017  Dirk Beyer
+ *  All rights reserved.
+ *
+ *  Licensed under the Apache License, Version 2.0 (the "License");
+ *  you may not use this file except in compliance with the License.
+ *  You may obtain a copy of the License at
+ *
+ *      http://www.apache.org/licenses/LICENSE-2.0
+ *
+ *  Unless required by applicable law or agreed to in writing, software
+ *  distributed under the License is distributed on an "AS IS" BASIS,
+ *  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
+ *  See the License for the specific language governing permissions and
+ *  limitations under the License.
+ *
+ *
+ *  CPAchecker web page:
+ *    http://cpachecker.sosy-lab.org
+ */
 package org.sosy_lab.cpachecker.cpa.arg.witnessexport;
 
 import static com.google.common.truth.Truth.assertWithMessage;
 
+import com.google.common.base.Charsets;
 import com.google.common.base.Joiner;
 import com.google.common.base.Strings;
 import com.google.common.collect.ImmutableMap;
 import com.google.errorprone.annotations.CanIgnoreReturnValue;
+import java.io.BufferedReader;
+import java.io.FileInputStream;
 import java.io.IOException;
+import java.io.InputStreamReader;
 import java.io.Writer;
-import java.nio.charset.StandardCharsets;
 import java.nio.file.Files;
 import java.nio.file.Path;
-import java.util.LinkedHashMap;
+import java.nio.file.Paths;
+import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
 import java.util.Objects;
 import java.util.regex.Matcher;
 import java.util.regex.Pattern;
-import org.junit.Ignore;
+import java.util.stream.Collectors;
 import org.junit.Test;
 import org.sosy_lab.common.configuration.Configuration;
 import org.sosy_lab.common.configuration.ConfigurationBuilder;
@@ -34,7 +53,6 @@ import org.sosy_lab.common.io.IO;
 import org.sosy_lab.common.io.TempFile;
 import org.sosy_lab.cpachecker.util.automaton.AutomatonGraphmlCommon.WitnessType;
 import org.sosy_lab.cpachecker.util.test.CPATestRunner;
-import org.sosy_lab.cpachecker.util.test.CPATestRunner.ExpectedVerdict;
 import org.sosy_lab.cpachecker.util.test.TestDataTools;
 import org.sosy_lab.cpachecker.util.test.TestResults;
 
@@ -46,17 +64,11 @@ public class WitnessExporterTest {
   private enum WitnessGenerationConfig {
     K_INDUCTION("kInduction"),
 
-    BDD_CONCURRENCY("bddAnalysis-concurrency"),
-
-    PREDICATE_ANALYSIS("predicateAnalysis"),
-
-    VALUE_ANALYSIS("valueAnalysis"),
-
-    BAM("valueAnalysis-predicateAnalysis-bam");
+    PREDICATE_ANALYSIS("predicateAnalysis");
 
     private final String fileName;
 
-    WitnessGenerationConfig(String pConfigName) {
+    private WitnessGenerationConfig(String pConfigName) {
       fileName = String.format("witnessGeneration-%s.properties", pConfigName);
     }
   }
@@ -67,146 +79,90 @@ public class WitnessExporterTest {
 
   @Test(timeout = 90000)
   public void multivar_true() throws Exception {
-    new WitnessTester("multivar.i", ExpectedVerdict.TRUE, WitnessGenerationConfig.K_INDUCTION)
-        .performTest();
-  }
-
-  @Test(timeout = 90000)
-  public void multivar_true_2() throws Exception {
-    new WitnessTester(
-            "multivar.i", ExpectedVerdict.TRUE, WitnessGenerationConfig.PREDICATE_ANALYSIS)
-        .performTest();
-  }
-
-  @Test(timeout = 90000)
-  public void max_true() throws Exception {
-    new WitnessTester("max.c", ExpectedVerdict.TRUE, WitnessGenerationConfig.VALUE_ANALYSIS)
+    newWitnessTester("multivar_true-unreach-call1_true-termination.i")
+        .useGenerationConfig(WitnessGenerationConfig.K_INDUCTION)
         .performTest();
   }
 
   @Test(timeout = 90000)
   public void minepump_spec1_product33_false() throws Exception {
-    new WitnessTester(
-            "minepump_spec1_product33.cil.c",
-            ExpectedVerdict.FALSE,
-            WitnessGenerationConfig.PREDICATE_ANALYSIS)
-        .performTest();
-  }
-
-  @Test(timeout = 90000)
-  public void minepump_spec1_product33_false_2() throws Exception {
-    new WitnessTester(
-            "minepump_spec1_product33.cil.c",
-            ExpectedVerdict.FALSE,
-            WitnessGenerationConfig.K_INDUCTION)
-        .performTest();
-  }
-
-  @Test(timeout = 90000)
-  @Ignore // TODO takes too long and needs replacement, cf. #926
-  public void concurrency_false_fib_bench() throws Exception {
-    new WitnessTester(
-            "fib_bench-2.i", ExpectedVerdict.FALSE, WitnessGenerationConfig.BDD_CONCURRENCY)
-        .performTest();
-  }
-
-  @Test(timeout = 200000)
-  @Ignore // TODO takes too long and needs replacement, cf. #926
-  public void concurrency_false_mix000_power() throws Exception {
-    new WitnessTester(
-            "mix000_power.oepc.i", ExpectedVerdict.FALSE, WitnessGenerationConfig.BDD_CONCURRENCY)
+    newWitnessTester("minepump_spec1_product33_false-unreach-call_false-termination.cil.c")
+        .performTest()
+        .useGenerationConfig(WitnessGenerationConfig.K_INDUCTION)
         .performTest();
   }
 
   @Test(timeout = 90000)
   public void rule60_list2_false() throws Exception {
-    new WitnessTester(
-            "rule60_list2.i", ExpectedVerdict.FALSE, WitnessGenerationConfig.PREDICATE_ANALYSIS)
-        .performTest();
-  }
-
-  @Test(timeout = 90000)
-  public void rule60_list2_false_2() throws Exception {
-    new WitnessTester(
-            "rule60_list2.i", ExpectedVerdict.FALSE, WitnessGenerationConfig.VALUE_ANALYSIS)
-        .performTest();
-  }
-
-  @Test(timeout = 90000)
-  public void valueInvariant_true() throws Exception {
-    new WitnessTester(
-            "valueInvariant.c", ExpectedVerdict.TRUE, WitnessGenerationConfig.VALUE_ANALYSIS)
-        .performTest();
-  }
-
-  @Test(timeout = 90000)
-  public void valueInvariant_true_2() throws Exception {
-    new WitnessTester("valueInvariant.c", ExpectedVerdict.TRUE, WitnessGenerationConfig.BAM)
-        .performTest();
-  }
-
-  @Test(timeout = 90000)
-  public void max_true_2() throws Exception {
-    new WitnessTester("max.c", ExpectedVerdict.TRUE, WitnessGenerationConfig.BAM).performTest();
-  }
-
-  @Test(timeout = 90000)
-  public void weekdays_true() throws Exception {
-    new WitnessTester("weekdays.c", ExpectedVerdict.TRUE, WitnessGenerationConfig.VALUE_ANALYSIS)
-        .performTest();
-  }
-
-  @Test(timeout = 90000)
-  public void weekdays_no_termination_true() throws Exception {
-    new WitnessTester(
-            "weekdays_no_termination.c",
-            ExpectedVerdict.TRUE,
-            WitnessGenerationConfig.VALUE_ANALYSIS)
-        .performTest();
+    newWitnessTester("rule60_list2.c_false-unreach-call_1.i")
+      .performTest();
   }
 
   private static void performTest(
       String pFilename,
       String pSpecification,
-      ExpectedVerdict pExpected,
       WitnessGenerationConfig pGenerationConfig,
       Map<String, String> pOverrideOptions)
       throws Exception {
-    String fullPath = Path.of(TEST_DIR_PATH, pFilename).toString();
+    String fullPath = Paths.get(TEST_DIR_PATH, pFilename).toString();
 
     TempCompressedFilePath witnessPath = new TempCompressedFilePath("witness", ".graphml");
 
     WitnessType witnessType =
-        generateWitness(
-            fullPath, pExpected, pGenerationConfig, pSpecification, pOverrideOptions, witnessPath);
+        generateWitness(fullPath, pGenerationConfig, pSpecification, pOverrideOptions, witnessPath);
 
-    validateWitness(
-        fullPath, pSpecification, pExpected, pOverrideOptions, witnessPath, witnessType);
+    validateWitness(fullPath, pSpecification, pOverrideOptions, witnessPath, witnessType);
   }
 
   private static WitnessType generateWitness(
       String pFilePath,
-      ExpectedVerdict pExpected,
       WitnessGenerationConfig pGenerationConfig,
       String pSpecification,
       Map<String, String> pOverrideOptions,
       TempCompressedFilePath pWitnessPath)
       throws Exception {
-    Map<String, String> overrideOptions = new LinkedHashMap<>(pOverrideOptions);
+    Map<String, String> overrideOptions = new HashMap<>(pOverrideOptions);
     overrideOptions.put(
         "counterexample.export.graphml", pWitnessPath.uncompressedFilePath.toString());
     if (pGenerationConfig.equals(WitnessGenerationConfig.K_INDUCTION)) {
       overrideOptions.put("bmc.invariantsExport", pWitnessPath.uncompressedFilePath.toString());
+      Path origInvGenConfigFile = Paths.get("test/config/invariantGeneration-witness.properties");
+      Path invGenConfigFile =
+          origInvGenConfigFile.resolveSibling(
+              pWitnessPath.uncompressedFilePath.getFileName() + ".properties");
+      invGenConfigFile.toFile().deleteOnExit();
+      Files.copy(origInvGenConfigFile, invGenConfigFile);
+      List<String> lines;
+      try (BufferedReader reader =
+          new BufferedReader(
+              new InputStreamReader(
+                  new FileInputStream(invGenConfigFile.toString()), Charsets.UTF_8))) {
+        lines =
+            reader
+                .lines()
+                .map(
+                    line -> {
+                      Matcher matcher = PROOF_WITNESS_OPTION_PATTERN.matcher(line);
+                      if (matcher.matches()) {
+                        return matcher.group(1) + pWitnessPath.uncompressedFilePath.toString();
+                      }
+                      return line;
+                    })
+                .collect(Collectors.toList());
+      }
+      try (Writer writer = IO.openOutputFile(invGenConfigFile, Charsets.UTF_8)) {
+        for (String line : lines) {
+          writer.write(line);
+          writer.write(System.lineSeparator());
+        }
+      }
       overrideOptions.put(
           "parallelAlgorithm.configFiles",
           "config/components/kInduction/kInduction.properties, "
-              + getInvGenFile(pWitnessPath)
+              + invGenConfigFile.toString()
               + "::supply-reached-refinable");
     } else {
       overrideOptions.put("cpa.arg.proofWitness", pWitnessPath.uncompressedFilePath.toString());
-    }
-    if (pExpected.equals(ExpectedVerdict.TRUE)) {
-      overrideOptions.put("cpa.arg.compressWitness", "false");
     }
     Configuration generationConfig =
         getProperties(pGenerationConfig.fileName, overrideOptions, pSpecification);
@@ -215,51 +171,26 @@ public class WitnessExporterTest {
     // Trigger statistics so that the witness is written to the file
     results.getCheckerResult().writeOutputFiles();
 
-    switch (pExpected) {
-      case TRUE:
-        results.assertIsSafe();
-        return WitnessType.CORRECTNESS_WITNESS;
-      case FALSE:
-        results.assertIsUnsafe();
-        return WitnessType.VIOLATION_WITNESS;
-      default:
-        assertWithMessage("Cannot determine expected result.").fail();
-        throw new AssertionError("Unreachable code.");
+    if (isSupposedToBeSafe(pFilePath)) {
+      results.assertIsSafe();
+      return WitnessType.CORRECTNESS_WITNESS;
+    } else if (isSupposedToBeUnsafe(pFilePath)) {
+      results.assertIsUnsafe();
+      return WitnessType.VIOLATION_WITNESS;
     }
-  }
-
-  private static String getInvGenFile(TempCompressedFilePath pWitnessPath) throws IOException {
-    Path origInvGenConfigFile = Path.of("test/config/invariantGeneration-witness.properties");
-    Path invGenConfigFile =
-        origInvGenConfigFile.resolveSibling(
-            pWitnessPath.uncompressedFilePath.getFileName() + ".properties");
-    invGenConfigFile.toFile().deleteOnExit();
-    Files.copy(origInvGenConfigFile, invGenConfigFile);
-    List<String> lines = Files.readAllLines(invGenConfigFile);
-    try (Writer writer = IO.openOutputFile(invGenConfigFile, StandardCharsets.UTF_8)) {
-      for (String line : lines) {
-        Matcher matcher = PROOF_WITNESS_OPTION_PATTERN.matcher(line);
-        if (matcher.matches()) {
-          writer.write(matcher.group(1));
-          writer.write(pWitnessPath.uncompressedFilePath.toString());
-        } else {
-          writer.write(line);
-        }
-        writer.write(System.lineSeparator());
-      }
-    }
-    return invGenConfigFile.toString();
+    assertWithMessage("Cannot determine expected result.").fail();
+    throw new AssertionError("Unreachable code.");
   }
 
   private static void validateWitness(
       String pFilePath,
       String pSpecification,
-      ExpectedVerdict pExpected,
       Map<String, String> pOverrideOptions,
       TempCompressedFilePath witnessPath,
       WitnessType witnessType)
       throws Exception {
-    Map<String, String> overrideOptions = new LinkedHashMap<>(pOverrideOptions);
+    Map<String, String> overrideOptions;
+    overrideOptions = new HashMap<>(pOverrideOptions);
     final String validationConfigFile;
     String specification = pSpecification;
     switch (witnessType) {
@@ -282,15 +213,12 @@ public class WitnessExporterTest {
 
     TestResults results = CPATestRunner.run(validationConfig, pFilePath);
 
-    switch (pExpected) {
-      case TRUE:
-        results.assertIsSafe();
-        break;
-      case FALSE:
-        results.assertIsUnsafe();
-        break;
-      default:
-        assertWithMessage("Cannot determine expected result.").fail();
+    if (isSupposedToBeSafe(pFilePath)) {
+      results.assertIsSafe();
+    } else if (isSupposedToBeUnsafe(pFilePath)) {
+      results.assertIsUnsafe();
+    } else {
+      assertWithMessage("Cannot determine expected result.").fail();
     }
   }
 
@@ -304,6 +232,14 @@ public class WitnessExporterTest {
       pOverrideOptions.put(SPECIFICATION_OPTION, pSpecification);
     }
     return configBuilder.setOptions(pOverrideOptions).build();
+  }
+
+  private static boolean isSupposedToBeUnsafe(String pFilePath) {
+    return pFilePath.contains("_false_assert") || pFilePath.contains("_false-unreach");
+  }
+
+  private static boolean isSupposedToBeSafe(String pFilePath) {
+    return pFilePath.contains("_true_assert") || pFilePath.contains("_true-unreach");
   }
 
   private static class TempCompressedFilePath {
@@ -322,8 +258,7 @@ public class WitnessExporterTest {
               .toAbsolutePath();
       Path compressedFileNamePath = compressedFilePath.getFileName();
       if (compressedFileNamePath == null) {
-        throw new AssertionError(
-            "Files obtained from TempFile.builder().create() should always have a file name.");
+        throw new AssertionError("Files obtained from TempFile.builder().create() should always have a file name.");
       }
       String fileName = compressedFileNamePath.toString();
       String uncompressedFileName =
@@ -357,18 +292,21 @@ public class WitnessExporterTest {
   private static class WitnessTester {
 
     private final String programFile;
-    private final ExpectedVerdict expected;
-    private final WitnessGenerationConfig generationConfig;
+
+    private WitnessGenerationConfig generationConfig = WitnessGenerationConfig.PREDICATE_ANALYSIS;
 
     private String specificationFile = "config/specification/default.spc";
 
     private ImmutableMap.Builder<String, String> overrideOptionsBuilder = ImmutableMap.builder();
 
-    private WitnessTester(
-        String pProgramFile, ExpectedVerdict pExpected, WitnessGenerationConfig pGenerationConfig) {
+    private WitnessTester(String pProgramFile) {
       programFile = Objects.requireNonNull(pProgramFile);
-      expected = pExpected;
+    }
+
+    @CanIgnoreReturnValue
+    public WitnessTester useGenerationConfig(WitnessGenerationConfig pGenerationConfig) {
       generationConfig = Objects.requireNonNull(pGenerationConfig);
+      return this;
     }
 
     @CanIgnoreReturnValue
@@ -383,13 +321,18 @@ public class WitnessExporterTest {
       return this;
     }
 
-    public void performTest() throws Exception {
+    @CanIgnoreReturnValue
+    public WitnessTester performTest() throws Exception {
       WitnessExporterTest.performTest(
           programFile,
           specificationFile,
-          expected,
           generationConfig,
-          overrideOptionsBuilder.buildOrThrow());
+          overrideOptionsBuilder.build());
+      return this;
     }
+  }
+
+  public static WitnessTester newWitnessTester(String pProgramFile) {
+    return new WitnessTester(pProgramFile);
   }
 }
